--- a/accueil.CSS
+++ b/accueil.CSS
@@ -46,23 +46,23 @@ header nobr {
 }
 
 header nobr a, header nobr div button {
-    padding: 20px 20px 20px 20px;
+    /*padding: 20px 20px 20px 20px;*/
     color: rgb(128, 85, 59);
     font-size: 16px;
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     text-decoration: none;
     line-height: 0px;
-    padding: 5px 12px;
+    padding: 11px 5px;
 }
 
 header nobr:hover {
     background-color: #dcd1f4;
 }
-
+/*
 header nobr a:hover {
     background-color: #dcd1f4;
 }
-
+*/
 body{
     padding: 0;
     margin: 0;
