--- a/accueil.CSS
+++ b/accueil.CSS
@@ -299,3 +299,49 @@ img{
 #actu , li{
     padding-left: 1em;
 }
+
+/* Menus de recherche du navbar */
+
+.dropbtn{
+    background-color: transparent;
+    color: rgb(128, 85, 59);
+    padding: 0px 10px 5px 10px;
+    font-size: 16px;
+    font-family: 'Kanit', "Trebuchet MS", Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    line-height: 0px;
+    border: none;
+}
+
+.dropdown{
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 300px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a{
+    color: black;
+    padding: 5px 12px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #dcd1f4;
+}
