--- a/Membres.css
+++ b/Membres.css
@@ -296,3 +296,45 @@ section{
     box-sizing: border-box;
     margin: 20px;
 }
+
+.header1 {
+    text-align: right;
+  }
+  
+  #editButton {
+    background-color: #f44336;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .member {
+    margin-bottom: 10px;
+  }
+  
+  .deleteButton {
+    background-color: #f44336;
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  #addMemberForm {
+    margin-top: 10px;
+  }
+  
+  #newMemberName {
+    margin-right: 10px;
+  }
+  
+  #addMemberButton {
+    background-color: #4CAF50;
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  
