Page projet finie

--- a/Projets.css
+++ b/Projets.css
@@ -167,6 +167,10 @@ footer{
 
 }
 
+h1{
+    padding: 1em;
+}
+
 h3{
     color: black;
 }
@@ -308,4 +312,8 @@ img{
     padding: 1em;
     width: 105px;
     height: 105px;
+}
+
+.attention{
+    padding: 1em;
 }
