--- a/accueil.CSS
+++ b/accueil.CSS
@@ -149,7 +149,7 @@ img{
 }
 
 #competence{
-    width: 60%;
+    width: 50%;
     height: auto;
     border : 4px solid #8759EA;
 }
@@ -161,4 +161,9 @@ img{
 
 #actu , li{
     padding-left: 1em;
+}
+
+#competence:hover{
+    width: 85%;
+    height: auto;
 }
