--- a/accueil.CSS
+++ b/accueil.CSS
@@ -154,10 +154,6 @@ img{
     border : 4px solid #8759EA;
 }
 
-/*main{
-    padding-top: 10px;
-    scroll-margin-top: 10px;
-}*/
 
 #actu , li{
     padding-left: 1em;
@@ -166,4 +162,12 @@ img{
 #competence:hover{
     width: 85%;
     height: auto;
+}
+
+#head2{
+    height: 100px;
+}
+
+p{
+   font-size: 30px;
 }
